<resources>
    <string name="app_name">Shift Schedule(OCP)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disclaimer">This is a personal project designed by Ikechi, licensed under the Apache License 2.0 <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">License</a></string>
    <string name="license_agreement"><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">License Agreement</a></string>
    <string name="send_message"><a href="https://iykeafrica.github.io/contact_form.html">Send us an email</a></string>
    <string name="refresh">Refresh</string>
    <string name="select_shift">Change Shift</string>
    <string name="calculate_ot">Calculate Overtime</string>
    <string name="about">About</string>
    <string name="about_body">This is a shift schedule app modelled with the different shift patterns of workers across Dangote Industry Limited.
        The maiden version was designed using Obajana Cement Plant\'s (3-3-3 days shift pattern of MORNING, NIGHT and OFF duties). This updated
        version has 2-2-2 days, 3-3-3 days and 4-4-4 days pattern shift patterns.
        \nAnother excellent feature of this app is the overtime calculator.
    </string>
    <string name="about_app">About</string>
    <string name="select_your_shift">SELECT YOUR SHIFT</string>
    <string name="plant_nshift_a">Plant\nShift A</string>
    <string name="plant_nshift_b">Plant\nShift B</string>
    <string name="plant_nshift_c">Plant\nShift C</string>
    <string name="c_mtce_nshift_a">C.Mtce\nShift A</string>
    <string name="c_mtce_nshift_b">C.Mtce\nShift B</string>
    <string name="c_mtce_nshift_c">C.Mtce\nShift C</string>
    <string name="security_nshift_a">Security\nShift A</string>
    <string name="security_nshift_b">Security\nShift B</string>
    <string name="security_nshift_c">Security\nShift C</string>
    <string name="calculate_overtime">Calculate Overtime</string>
    <string name="basic_salary">Basic Salary&#160;&#160;&#160;&#160;</string>
    <string name="worked_days">Worked Days&#160;&#160;&#160;</string>
    <string name="leave_days">AL/CL/SL Days</string>
    <string name="note"><font color="red">*</font> This shift calculation has been verified only with OCP.
        \nDon\'t forget to use last month\'s work days when calculating this month\'s overtime.
    </string>
    <string name="calculate_ot_button">Calculate OT</string>

    <string name="plant_shift_a">Plant Shift A</string>
    <string name="plant_shift_b">Plant Shift B</string>
    <string name="plant_shift_c">Plant Shift C</string>
    <string name="plant_shift_d">Plant Shift D</string>
    <string name="plant_shift_e">Plant Shift E</string>
    <string name="plant_shift_f">Plant Shift F</string>
    <string name="plant_shift_g">Plant Shift G</string>
    <string name="plant_shift_h">Plant Shift H</string>
    <string name="plant_shift_i">Plant Shift I</string>
    <string name="plant_shift_j">Plant Shift J</string>
    <string name="plant_shift_k">Plant Shift K</string>
    <string name="plant_shift_l">Plant Shift L</string>
    <string name="c_mtce_shift_a">C.Mtce Shift A</string>
    <string name="c_mtce_shift_b">C.Mtce Shift B</string>
    <string name="c_mtce_shift_c">C.Mtce Shift C</string>
    <string name="security_shift_a">Security Shift A</string>
    <string name="security_shift_b">Security Shift B</string>
    <string name="security_shift_c">Security Shift C</string>
    <string name="basic">Basic</string>
    <string name="month_s_work_days">See shift calendar</string>
    <string name="total_leave_days">Days on leave or 0</string>
    <string name="update"><font fgcolor='#FF6347'>Update</font></string>
    <string name="settings">Settings</string>
    <string name="color_picker"><u>Color Picker</u></string>
    <string name="color_picker_message">Change shift calendar cell background color as well as date text color from the color picker options.</string>
    <string name="drop_down_arrow">color picker drop down arrow</string>
    <string name="sample_colors">sample colors</string>
    <string name="save">Save</string>
    <string name="day">Day</string>
    <string name="change">Change</string>
    <string name="night">Night</string>
    <string name="off">Off</string>
    <string name="default_colors">Default Colors</string>
    <string name="privacy_header"><u>Privacy</u></string>
    <string name="about_header"><u>About</u></string>
    <string name="version"><u>Version</u></string>
    <string name="version_number">V2.0</string>
    <string name="terms_of_use_body">Shift Schedule(OCP) has been designed to display shift patterns of workers and calculate overtime. Hence, you
        may use this app solely for your personal (non-commercial) good. We reserve all rights for the content of this app. So, do not write a software
        or another app that uses the program or data from Shift Schedule(OCP) whether it is done in exchange for money or not.</string>
    <string name="terms_of_use"><u>Terms of Use</u></string>
    <string name="catalog"><u>Catalog Date</u></string>
    <string name="date">Friday, 8 October 2021 07:22:09</string>
    <string name="copyright">\u00A9</string>
    <string name="contact_us"><u>Contact Us</u></string>
    <string name="cell_background">Cell background</string>
    <string name="date_text">Date text</string>
    <string name="default_color">Default Color</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="create_note">Create Note</string>

</resources>

    <!--<font fgcolor='#FF6347'>Update</font>-->
    <!--<font color="red">\u25CF</font>&#160;&#160;-->