<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="never"/>

    <item android:id="@+id/select_shift"
        android:title="@string/select_shift"
        app:showAsAction="never"/>

    <item android:id="@+id/calculate_ot"
        android:title="@string/calculate_ot"
        app:showAsAction="never"/>

    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item android:id="@+id/update"
        android:title="@string/update"
        android:visible="false"
        android:icon="@drawable/ic_notification_important"
        app:showAsAction="never"/>

    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>