<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_bar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/app_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="@id/app_bar_container"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/app_bar_container"/>

            <ImageView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_more"
                app:layout_constraintEnd_toEndOf="@id/app_bar_container"
                app:layout_constraintTop_toTopOf="@id/app_bar_container"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@id/app_bar_container"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/martel"
        android:text="@string/select_your_shift"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/plant_shift"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:background="@drawable/custom_button_1"
            android:fontFamily="@font/roboto_black"
            android:text="@string/plant_nshift_a" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_button_2"
            android:text="@string/plant_nshift_b" />

        <TextView
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_button_3"
            android:text="@string/plant_nshift_c" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/c_mtce_shift"
        android:layout_marginTop="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_shift">

        <TextView
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_button_4"
            android:text="@string/c_mtce_nshift_a" />

        <TextView
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_button_5"
            android:text="@string/c_mtce_nshift_b" />

        <TextView
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_button_6"
            android:text="@string/c_mtce_nshift_c" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/security_shift"
        android:layout_marginTop="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_mtce_shift">

        <TextView
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_button_7"
            android:text="@string/security_nshift_a" />

        <TextView
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_button_8"
            android:text="@string/security_nshift_b" />

        <TextView
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_button_9"
            android:text="@string/security_nshift_c" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>